--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "postcss": "8.4.22",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^8.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "tailwindcss": "^3.3.1"
   }
 }
