--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-preset-env": "^8.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.0",
     "tailwindcss": "^3.3.1"
   }
 }
